Back to Projects location fixed on mobile, projects opacity height fixed

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -189,7 +189,7 @@
 .projects-opacity {
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow-y: scroll;
   z-index: 12;
 }
