--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -217,3 +217,7 @@ i {
   color: yellow;
   opacity: 1;
 }
+
+.back-to-projects {
+  margin-block-end: 0;
+}
